--- a/ProjectUbuild/Web.config
+++ b/ProjectUbuild/Web.config
@@ -12,7 +12,7 @@
 		</sectionGroup>
 	</configSections>
 	<connectionStrings>
-		<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=Ubuild;Integrated Security=True" providerName="System.Data.SqlClient"/>
+		<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=ProjectUbuild2;Integrated Security=True" providerName="System.Data.SqlClient"/>
 		<!--		<add name="DefaultConnection" connectionString="Data Source=172.29.18.95;Initial Catalog=uBuild; User Id=ubuild_user; Password=ubuild_pass" providerName="System.Data.SqlClient" /> -->
 		<!--<add name="DefaultConnection" connectionString="Data Source=198.38.83.200;Initial Catalog=sordii_ubdb; User Id=sordii_ub; Password=ubP@$$505@18" providerName="System.Data.SqlClient" />-->
 	</connectionStrings>
