--- a/ProjectUbuild/packages.config
+++ b/ProjectUbuild/packages.config
@@ -4,7 +4,9 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="bootstrap.less" version="3.3.5" targetFramework="net452" />
   <package id="Bootstrap.v3.Datetimepicker" version="4.17.45" targetFramework="net452" />
+  <package id="BouncyCastle" version="1.8.2" targetFramework="net452" />
   <package id="Brudex.CodeFirst" version="1.0.0" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net452" />
   <package id="Dapper" version="1.12" targetFramework="net45" />
   <package id="DapperExtensions" version="1.4.4" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
@@ -21,6 +23,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
+  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
